2005-05-05  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_timers.cpp (gameswf): If _start is trashed for
	some reason, assuming it's expired and then reset it. This should
	eventually be fixed once I figure out what's causing the
	problem. It takes about an hour to occur.
	* base/tu_timer.cpp (get_profile_ticks): Don't need the tz
	variable, as it's not used with gettimeofday() on Linux anymore.
	

2005-05-05  Rob Savoye  <rob@darkstar.welcomehome.org>

	* gameswf_string.cpp (string_new): Don't recreate the String
	object.
	* gameswf/gameswf_action.cpp (execute): Clear the members of an
	object on the stack when the 'with' stack frame returns to a
	higher level.

2005-05-05  Rob Savoye  <rob@darkstar.welcomehome.org>

	* gameswf/gameswf_render_handler_ogl.cpp (render_handler): Check
	in patch #1195922, making the workaround for the i810 OpenGL
	problem configurable.
	* configure.ac: Add -enable-i810-lod-bias to make workaround
	optional. Add descriptive text to AC_DEFINE(HAVE_WINSOCK)
	* configure, config.h.in: Regenerated.

2005-05-04  Rob Savoye  <rob@blackpeter.welcomehome.org>

	* gameswf/gameswf_render_handler_ogl.cpp (render_handler): Added
	and slightly changed patch #1194680. This code now only gets
	executed when using a non default value for the LOD BIAS.

2005-05-01  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_textformat.cpp (textformat_setformat): Set the
	flags if the corresponding members are set.

	* configure.ac: Add patch from sourceforge (#1186726) for checking
	xml option differently.
	* aclocal.m4, configure: Regenerated.
	* gameswf/gameswf_test_ogl.cpp: Add additional value to "-r" option
	to optionally disable sound. From same sourceforge patch
	#1186726.
	
2005-04-30  Rob Savoye  <rob@bertha.welcomehome.org>

	* base/container.h: Add support to tu_string for += char.
	Added new methods to tu_string, utf8_from_char(), utf8_to_upper(),
	utf8_to_lower().
	* base/container.cpp: Add functions for utf8_from_char(),